<resources>
    <string name="app_name">DtsChapter03-starter</string>
    <string name="dts">DTS Kominfo</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="get_started">GET STARTED</string>
    <string name="log_in">Log in</string>
    <string name="reset_code">Reset Code</string>
    <string name="enter_your_reset_code">Enter your reset code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="send_request">Send Request</string>
</resources>
